feat(round-28AH): Motor Judicial Completo — secretariado, aceleração por rito, chips, analytics e process mining
Seções 4-14 + 10 ideias adicionais completas:
- Secretariado PJe++ (painel, assinatura em lote, expediente, agrupadores, bottleneck)
- Aceleradores por rito: civil, juizado, família, penal, trabalhista, execução fiscal, fazenda, eleitoral
- Gabinete do magistrado: workload insight, pre-work package, voto readiness, pauta
- Chips processuais: 17 tipos, auto-detecção, acessibilidade (LIBRAS, Lei 10.436)
- Conciliação: probabilidade, fast-track, homologação
- Documentos: trust line, minuta, estado operacional, origemSistema enum
- Autuação: retificação diff, aplicator, metadata quality 0-100
- Ingest externo: normalização, importação, carga de processo externo
- Mandados, certidões, domicílio judicial resiliente
- Notes processuais, gigs de execução
- IA dreaming: métricas e endpoint /metricas
- Analytics: celeridade, gargalo, tempo por rito, retrabalho, process mining + materialização async
- Core API: PjbApiResponseEnvelope, PjbPaginationMetadata, PjbIntegrationEventEnvelope, PjbEventPublisherPort
- Integração judicial canônica: mapper + connector adapter
- Ideias adicionais: nulidade, paralisação, sobrestamento, repetitivo, precedente, responsável workload, arquivamento
- Migrations V231-V242: 12 tabelas novas + ALTER TABLE documento

Resultado: 2.343 testes, 0 falhas novas (1 pré-existente: .idea folder do IntelliJ)

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>